# services/booking/api/booking/v1/update_booking_guest_info.pb.go
@@ -1,0 +1,237 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.11
+// 	protoc        (unknown)
+// source: booking/v1/rpc/update_booking_guest_info.proto
+
+package bookingv1
+
+import (
+	_ "buf.build/gen/go/bufbuild/protovalidate/protocolbuffers/go/buf/validate"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type UpdateBookingGuestInfoRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            string                 `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	CountryCode   string                 `protobuf:"bytes,2,opt,name=country_code,json=countryCode,proto3" json:"country_code,omitempty"`
+	CitySlug      string                 `protobuf:"bytes,3,opt,name=city_slug,json=citySlug,proto3" json:"city_slug,omitempty"`
+	HotelId       string                 `protobuf:"bytes,4,opt,name=hotel_id,json=hotelId,proto3" json:"hotel_id,omitempty"`
+	GuestName     *string                `protobuf:"bytes,5,opt,name=guest_name,json=guestName,proto3,oneof" json:"guest_name,omitempty"`
+	GuestEmail    *string                `protobuf:"bytes,6,opt,name=guest_email,json=guestEmail,proto3,oneof" json:"guest_email,omitempty"`
+	GuestPhone    *string                `protobuf:"bytes,7,opt,name=guest_phone,json=guestPhone,proto3,oneof" json:"guest_phone,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *UpdateBookingGuestInfoRequest) Reset() {
+	*x = UpdateBookingGuestInfoRequest{}
+	mi := &file_booking_v1_rpc_update_booking_guest_info_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *UpdateBookingGuestInfoRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UpdateBookingGuestInfoRequest) ProtoMessage() {}
+
+func (x *UpdateBookingGuestInfoRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_booking_v1_rpc_update_booking_guest_info_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UpdateBookingGuestInfoRequest.ProtoReflect.Descriptor instead.
+func (*UpdateBookingGuestInfoRequest) Descriptor() ([]byte, []int) {
+	return file_booking_v1_rpc_update_booking_guest_info_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *UpdateBookingGuestInfoRequest) GetId() string {
+	if x != nil {
+		return x.Id
+	}
+	return ""
+}
+
+func (x *UpdateBookingGuestInfoRequest) GetCountryCode() string {
+	if x != nil {
+		return x.CountryCode
+	}
+	return ""
+}
+
+func (x *UpdateBookingGuestInfoRequest) GetCitySlug() string {
+	if x != nil {
+		return x.CitySlug
+	}
+	return ""
+}
+
+func (x *UpdateBookingGuestInfoRequest) GetHotelId() string {
+	if x != nil {
+		return x.HotelId
+	}
+	return ""
+}
+
+func (x *UpdateBookingGuestInfoRequest) GetGuestName() string {
+	if x != nil && x.GuestName != nil {
+		return *x.GuestName
+	}
+	return ""
+}
+
+func (x *UpdateBookingGuestInfoRequest) GetGuestEmail() string {
+	if x != nil && x.GuestEmail != nil {
+		return *x.GuestEmail
+	}
+	return ""
+}
+
+func (x *UpdateBookingGuestInfoRequest) GetGuestPhone() string {
+	if x != nil && x.GuestPhone != nil {
+		return *x.GuestPhone
+	}
+	return ""
+}
+
+type UpdateBookingGuestInfoResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Booking       *Booking               `protobuf:"bytes,1,opt,name=booking,proto3" json:"booking,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *UpdateBookingGuestInfoResponse) Reset() {
+	*x = UpdateBookingGuestInfoResponse{}
+	mi := &file_booking_v1_rpc_update_booking_guest_info_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *UpdateBookingGuestInfoResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UpdateBookingGuestInfoResponse) ProtoMessage() {}
+
+func (x *UpdateBookingGuestInfoResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_booking_v1_rpc_update_booking_guest_info_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UpdateBookingGuestInfoResponse.ProtoReflect.Descriptor instead.
+func (*UpdateBookingGuestInfoResponse) Descriptor() ([]byte, []int) {
+	return file_booking_v1_rpc_update_booking_guest_info_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *UpdateBookingGuestInfoResponse) GetBooking() *Booking {
+	if x != nil {
+		return x.Booking
+	}
+	return nil
+}
+
+var File_booking_v1_rpc_update_booking_guest_info_proto protoreflect.FileDescriptor
+
+const file_booking_v1_rpc_update_booking_guest_info_proto_rawDesc = "" +
+	"\n" +
+	".booking/v1/rpc/update_booking_guest_info.proto\x12\n" +
+	"booking.v1\x1a\x1bbuf/validate/validate.proto\x1a\x1fbooking/v1/models/booking.proto\"\xb1\x04\n" +
+	"\x1dUpdateBookingGuestInfoRequest\x12\x18\n" +
+	"\x02id\x18\x01 \x01(\tB\b\xbaH\x05r\x03\xb0\x01\x01R\x02id\x124\n" +
+	"\fcountry_code\x18\x02 \x01(\tB\x11\xbaH\x0er\f2\n" +
+	"^[a-z]{2}$R\vcountryCode\x12<\n" +
+	"\tcity_slug\x18\x03 \x01(\tB\x1f\xbaH\x1cr\x1a2\x18^[a-z0-9]+(-[a-z0-9]+)*$R\bcitySlug\x12#\n" +
+	"\bhotel_id\x18\x04 \x01(\tB\b\xbaH\x05r\x03\xb0\x01\x01R\ahotelId\x12+\n" +
+	"\n" +
+	"guest_name\x18\x05 \x01(\tB\a\xbaH\x04r\x02\x10\x01H\x00R\tguestName\x88\x01\x01\x12-\n" +
+	"\vguest_email\x18\x06 \x01(\tB\a\xbaH\x04r\x02`\x01H\x01R\n" +
+	"guestEmail\x88\x01\x01\x12/\n" +
+	"\vguest_phone\x18\a \x01(\tB\t\xbaH\x06r\x04\x10\x05\x18 H\x02R\n" +
+	"guestPhone\x88\x01\x01:\xa0\x01\xbaH\x9c\x01\x1a\x99\x01\n" +
+	"$booking_guest_info.update_has_fields\x12)at least one guest field must be provided\x1aFhas(this.guest_name) || has(this.guest_email) || has(this.guest_phone)B\r\n" +
+	"\v_guest_nameB\x0e\n" +
+	"\f_guest_emailB\x0e\n" +
+	"\f_guest_phone\"O\n" +
+	"\x1eUpdateBookingGuestInfoResponse\x12-\n" +
+	"\abooking\x18\x01 \x01(\v2\x13.booking.v1.BookingR\abookingB\x1aZ\x18api/booking/v1;bookingv1b\x06proto3"
+
+var (
+	file_booking_v1_rpc_update_booking_guest_info_proto_rawDescOnce sync.Once
+	file_booking_v1_rpc_update_booking_guest_info_proto_rawDescData []byte
+)
+
+func file_booking_v1_rpc_update_booking_guest_info_proto_rawDescGZIP() []byte {
+	file_booking_v1_rpc_update_booking_guest_info_proto_rawDescOnce.Do(func() {
+		file_booking_v1_rpc_update_booking_guest_info_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_booking_v1_rpc_update_booking_guest_info_proto_rawDesc), len(file_booking_v1_rpc_update_booking_guest_info_proto_rawDesc)))
+	})
+	return file_booking_v1_rpc_update_booking_guest_info_proto_rawDescData
+}
+
+var file_booking_v1_rpc_update_booking_guest_info_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_booking_v1_rpc_update_booking_guest_info_proto_goTypes = []any{
+	(*UpdateBookingGuestInfoRequest)(nil),  // 0: booking.v1.UpdateBookingGuestInfoRequest
+	(*UpdateBookingGuestInfoResponse)(nil), // 1: booking.v1.UpdateBookingGuestInfoResponse
+	(*Booking)(nil),                        // 2: booking.v1.Booking
+}
+var file_booking_v1_rpc_update_booking_guest_info_proto_depIdxs = []int32{
+	2, // 0: booking.v1.UpdateBookingGuestInfoResponse.booking:type_name -> booking.v1.Booking
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_booking_v1_rpc_update_booking_guest_info_proto_init() }
+func file_booking_v1_rpc_update_booking_guest_info_proto_init() {
+	if File_booking_v1_rpc_update_booking_guest_info_proto != nil {
+		return
+	}
+	file_booking_v1_models_booking_proto_init()
+	file_booking_v1_rpc_update_booking_guest_info_proto_msgTypes[0].OneofWrappers = []any{}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_booking_v1_rpc_update_booking_guest_info_proto_rawDesc), len(file_booking_v1_rpc_update_booking_guest_info_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_booking_v1_rpc_update_booking_guest_info_proto_goTypes,
+		DependencyIndexes: file_booking_v1_rpc_update_booking_guest_info_proto_depIdxs,
+		MessageInfos:      file_booking_v1_rpc_update_booking_guest_info_proto_msgTypes,
+	}.Build()
+	File_booking_v1_rpc_update_booking_guest_info_proto = out.File
+	file_booking_v1_rpc_update_booking_guest_info_proto_goTypes = nil
+	file_booking_v1_rpc_update_booking_guest_info_proto_depIdxs = nil
+}
