# services/gateway/internal/http/router/booking.go
@@ -14,6 +14,7 @@ type bookingHandler interface {
 	GetRoomBookings(*gin.Context)
 	GetAvailability(*gin.Context)
 	GetBooking(*gin.Context)
+	UpdateBookingGuestInfo(*gin.Context)
 	ConfirmBooking(*gin.Context)
 	CancelBooking(*gin.Context)
 	DeleteBooking(*gin.Context)
@@ -42,6 +43,7 @@ func (br bookingRoutes) Register(r *gin.RouterGroup) {
 	bookings.POST("", br.h.CreateBooking)
 	bookings.GET("", br.h.GetBookings)
 	bookings.GET("/:bookingId", br.h.GetBooking)
+	bookings.PATCH("/:bookingId/guest-info", br.h.UpdateBookingGuestInfo)
 	bookings.PATCH("/:bookingId/confirm", br.h.ConfirmBooking)
 	bookings.PATCH("/:bookingId/cancel", br.h.CancelBooking)
 	bookings.DELETE("/:bookingId", br.h.DeleteBooking)
